--- a/pages/ex3.html
+++ b/pages/ex3.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex3</title>
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/ex3.css">
-    <link rel="icon" href="../img/logo-min.png">
+    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/ex3.css" />
+    <link rel="icon" href="../img/logo-min.png" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="cover">
             <h1>Kmin Academy</h1>
         </div>
-        <img class="avarta" src="../img/avatar.png">
+        <img class="avarta" src="../img/avatar.png" alt="avatar" />
     </div>
 </body>
 
