--- a/pages/ex4.html
+++ b/pages/ex4.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex4</title>
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/ex4.css">
-    <link rel="icon" href="../img/logo-min.png">
+    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/ex4.css" />
+    <link rel="icon" href="../img/logo-min.png" />
 </head>
 
 <body>
-    <h1>KMIN - ACADEMY OF COMPUTER SCIENCE </h1>
-    <img class="img-logo" src="../img/logo.png">
+    <h1>KMIN - ACADEMY OF COMPUTER SCIENCE</h1>
+    <img class="img-logo" src="../img/logo.png" alt="logo" />
 </body>
 
 </html>
